umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_cf+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Cf#c+3#n2#u5"] :bonds [] :charge 3 :spin "#u5 #s6"}} :counts {:success true :output {:atoms ["Cf#c+3#n4#u"] :bonds [] :charge 3 :spin "#u1 #s2"}}}
