umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_cf+4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Cf#c+4#n#u6"] :bonds [] :charge 4 :spin "#u6 #s7"}} :counts {:success true :output {:atoms ["Cf#c+4#n4"] :bonds [] :charge 4 :spin "#u0 #s1"}}}
