umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_cm+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Cm#c+3#u7"] :bonds [] :charge 3 :spin "#u7 #s8"}
    :success true}
  :counts {
    :output {:atoms ["Cm#c+3#n3#u"] :bonds [] :charge 3 :spin "#u1 #s2"}
    :success true}}
