umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_cm+4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Cm#c+4#u6"] :bonds []} :success true}
  :counts {:output {:atoms ["Cm#c+4#n3"] :bonds []} :success true}}
