umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_co+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Co#c+2#n2#u3"] :bonds [] :charge 2 :spin "#u3#s4"}
    :success true}
  :counts {
    :output {:atoms ["Co#c+2#n2#u3"] :bonds [] :charge 2 :spin "#u3#s4"}
    :success true}}
