umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_cr+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Cr#c+2#u4"] :bonds [] :charge 2 :spin "#u4#s5"}
    :success true}
  :counts {
    :output {:atoms ["Cr#c+2#u4"] :bonds [] :charge 2 :spin "#u4#s5"}
    :success true}}
