umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_cu+.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Cu#c+#n5"] :bonds [] :charge 1 :spin "#u0#s1"}
    :success true}
  :counts {
    :output {:atoms ["Cu#c+#n5"] :bonds [] :charge 1 :spin "#u0#s1"}
    :success true}}
